--- a/R/002-celltype.Rmd
+++ b/R/002-celltype.Rmd
@@ -58,6 +58,7 @@ obj <- readRDS(file.path(dir.main, "results/002_integration/rdata/FN_postprocess
 ```
 
 # Plot UMAPs
+
 ```{r}
 
 DimPlot(object = obj, group.by = "seurat_clusters")
@@ -85,7 +86,19 @@ pheatmap::pheatmap(scale(prop.table(as.matrix(table(obj@meta.data$predicted.anno
 
 ```
 
+# Find cluster markers
+
+```{r fig.width=10, fig.height=3.5, warning=FALSE, message=FALSE,error=FALSE}
+
+DefaultAssay(obj) <- "RNA"
+markers <- FindAllMarkers(obj,  group.by = "seurat_clusters", only.pos = T)
+top <- markers %>% group_by(cluster) %>% top_n(n = 3, wt = avg_log2FC)
+DotPlot(sub, features = top$gene) 
+
+```
+
 # Annotation level 2
+
 ```{r fig.width=12, fig.height=8}
 
 obj@meta.data$ann_level_2 <- NULL
